# 44Packages

./: .gitignore  AGENT.md  MANIFEST.in  README.md  build.sh  demo_cache.sqlite  main.py  pyproject.toml  requirements.txt  search.py  setup.py
docs/plans/: 2026-03-08-metric-engine-architecture-design.md  2026-03-08-metric-engine-architecture.md  2026-03-08-package-reorganization-design.md  2026-03-08-package-reorganization.md  2026-04-29-accounting-hierarchical-classification-design.md  2026-04-29-accounting-hierarchical-classification.md  2026-05-09-syscohada-accounting-rules.md  2026-05-17-cli-agent-sidecars-design.md  2026-05-17-cli-agent-sidecars.md
src/44packages/: __init__.py
src/FortyFour/: __init__.py  models.py
src/FortyFour.egg-info/: PKG-INFO  PKG-INFO 2  SOURCES.txt  requires.txt  top_level.txt
src/FortyFour/Finance/: __init__.py  company.py  company_v3.py  utils.py
src/FortyFour/Geospace/: utils.py
src/FortyFour/Utils/: __init__.py  aws.py  cli_generator.py  colors.py  helpers.py
src/FortyFour/accounting/: README.md  core.py  engine.py  sqlalchemy_adapter.py
src/FortyFour/accounting/strategies/: __init__.py  base.py  syscohada.py
tests/: test_accounting_core.py  test_accounting_module_layout.py  test_accounting_strategies.py  test_cli_generator.py  test_company_metrics.py  test_sec_cache.py
