[project]
name = "FortyFour"
dynamic = ["version"]
description = "This package puts together all the tools I have created"
readme = "README.md"
authors = [
    { name = "44 SCIENTIFICS LTD", email = "44scientifics@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3==1.34.59",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "plotly==5.19.0",
    "python-dateutil==2.9.0",
    "requests==2.31.0",
    "sqlalchemy>=2.0.49",
]

[project.urls]
Homepage = "https://github.com/44Scientifics/44Packages.git"

[tool.uv]
managed = true
package = true

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
